--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 	<title>Attendance Tracker</title>
 </head>
 <body>
-	<h1>Attendance Tracker</h1>
+	<h1>Attendance Tracker Test</h1>
 </body>
 </html>
