Latest Attendance Tracker code

--- a/index.html
+++ b/index.html
@@ -4,8 +4,30 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Attendance Tracker</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<h1>Attendance Tracker Test</h1>
+	<ul id="top-nav">
+  <li><img src="Assets/company-logo.png" id="logo"></li>
+  <li><h1>Attendance Tracker</h1></li>
+  <li style="float: right;"><img src="Assets/notification.png" id="notify"></li>
+  <li style="float: right;"><img src="Assets/profile.png" id="profile"></li>
+</ul>
+<div class="sidebar">
+  <a class="active" href="#home"><img src="Assets/Dashboard.png" id="dashboard"></a>
+  <a href="#news"><img src="Assets/Graph.png" id="graph"></a>
+  <a href="#contact"><img src="Assets/Hamburger.png" id="hamburger"></a>
+  <a href="#about"><img src="Assets/Settings.png" id="settings"></a>
+</div>
+
+<div id="main">
+	<p id="dashboard">My Dashboard</p>
+
+	<div class="card_1">
+		<p id="hi">Hi,</p>
+		<p id="name">Ashok V</p>
+	</div>
+
+</div>
 </body>
 </html>
