--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   <li style="float: right;"><img src="Assets/profile.png" id="profile"></li>
 </ul>
 <div class="sidebar">
-  <a class="active" href="#home"><img src="Assets/Dashboard.png" id="dashboard"></a>
-  <a href="#news"><img src="Assets/Graph.png" id="graph"></a>
-  <a href="#contact"><img src="Assets/Hamburger.png" id="hamburger"></a>
-  <a href="#about"><img src="Assets/Settings.png" id="settings"></a>
+  <img src="Assets/Dashboard.png" id="dashboard">
+  <img src="Assets/Graph.png" id="graph">
+  <img src="Assets/Hamburger.png" id="hamburger">
+  <img src="Assets/Settings.png" id="settings">
 </div>
 
 <div id="main">
@@ -26,8 +26,36 @@
 	<div class="card_1">
 		<p id="hi">Hi,</p>
 		<p id="name">Ashok V</p>
+		<p id="current-time"></p>
+		<p id="current-date"></p>
 	</div>
 
 </div>
+<script type="text/javascript">
+	function checkTime(i) {
+  if (i < 10) {
+    i = "0" + i;
+  }
+  return i;
+}
+
+function startTime() {
+  var today = new Date();
+  var h = today.getHours();
+  var m = today.getMinutes();
+  var s = today.getSeconds();
+  // add a zero in front of numbers<10
+  m = checkTime(m);
+  s = checkTime(s);
+  document.getElementById('current-time').innerHTML = h + ":" + m + ":" + s;
+  t = setTimeout(function() {
+    startTime()
+  }, 500);
+}
+startTime();
+
+today = new Date().toLocaleDateString('en-us', { weekday:"long", year:"numeric", month:"short", day:"numeric"});
+document.getElementById('current-date').innerHTML=today;
+</script>
 </body>
 </html>
